<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CCreateClassWindow</class>
 <widget class="QMainWindow" name="CCreateClassWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QLabel" name="classNumLab">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>30</y>
      <width>100</width>
      <height>50</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
     </font>
    </property>
    <property name="text">
     <string>班级编号</string>
    </property>
   </widget>
   <widget class="QLabel" name="classNamLab">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>120</y>
      <width>100</width>
      <height>50</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
     </font>
    </property>
    <property name="text">
     <string>班级名称</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="classNumEdi">
    <property name="geometry">
     <rect>
      <x>140</x>
      <y>30</y>
      <width>350</width>
      <height>50</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>16</pointsize>
     </font>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="classNamEdi">
    <property name="geometry">
     <rect>
      <x>140</x>
      <y>120</y>
      <width>350</width>
      <height>50</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>16</pointsize>
     </font>
    </property>
   </widget>
   <widget class="QPushButton" name="creClaBtn">
    <property name="geometry">
     <rect>
      <x>350</x>
      <y>200</y>
      <width>100</width>
      <height>30</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>10</pointsize>
     </font>
    </property>
    <property name="text">
     <string>创建</string>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>500</width>
     <height>26</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFuction">
    <property name="title">
     <string>功能</string>
    </property>
    <addaction name="actionCreate"/>
    <addaction name="actionExit"/>
   </widget>
   <addaction name="menuFuction"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionCreate">
   <property name="text">
    <string>创建</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="text">
    <string>退出 </string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
